feat: update routing and templates for habitaciones and servicios, add detail views