@@ -3,7 +3,6 @@ package com.hotel.macondo.controller;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -34,17 +33,19 @@ public class ServicioController {
     /** Construye el catalogo publico de experiencias del hotel. */
     @GetMapping
     public String listar(Model model) {
+        // El catalogo publico solo incluye servicios activos y se presenta por identificador.
         Collection<Servicio> catalogo = service.buscarTodos().stream()
                 .filter(Servicio::isActivo)
                 .sorted(Comparator.comparing(Servicio::getId))
                 .toList();
         model.addAttribute("servicios", catalogo);
+        // Las categorias se derivan de los datos del catalogo para el filtro visual.
         model.addAttribute("categorias",
                 catalogo.stream()
                         .map(Servicio::getCategoria)
                         .distinct()
-                        .collect(Collectors.toList()));
-        return "servicios";
+                        .toList());
+        return "servicio/servicios";
     }
 
     /** Construye el detalle publico de un servicio activo. */
@@ -56,6 +57,7 @@ public class ServicioController {
                     "Servicio no encontrado");
         }
 
+        // La vista de detalle recibe servicios alternativos para continuar la exploracion.
         List<Servicio> relacionados = service.buscarTodos().stream()
                 .filter(Servicio::isActivo)
                 .filter(item -> !item.getId().equals(id))
@@ -63,6 +65,6 @@ public class ServicioController {
                 .toList();
         model.addAttribute("servicio", servicio);
         model.addAttribute("relacionados", relacionados);
-        return "detalle_servicio";
+        return "servicio/detalle_servicio";
     }
 }
